Few pages and custom elements  added

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>Challengify: Главная</title>
+    <link rel="icon" href="img/icon.svg">
+    <title>Главная</title>
 </head>
 <body>
     <div class="right-polygon"></div>
     <header class="header container-fluid flex">
         <menu class="flex justify-content-between align-items-center col-12">
             <li class="menu-item"><a href="#">Главная</a></li>
-            <li class="menu-item"><a href="#">Профиль</a></li>
+            <li class="menu-item"><a href="profile.html">Профиль</a></li>
         </menu>
     </header>
-    <div class="main-content flex flex-column justify-content-around col-sm-12 col-md-10 col-lg-8">
+    <div class="main-content flex flex-column justify-content-around">
         <div class="main-content__main-block">
             <div class="main-content__main-block-rotated"></div>
             <h1 class="main-content__heading">Challengify</h1>
-            <p class="main-content__description">Приложение для участия в групповых и <br>индивидуальных челленджах.</p>
+            <p class="main-content__description">Приложение для участия в групповых и <br class="main-content__description-br">индивидуальных челленджах.</p>
             <a href="auth.html" class="my-button main-content__button"><span>Регистрация</span></a>
             <a href="auth.html" class="my-button"><span>Вход</span></a>
         </div>
