--- a/auth.html
+++ b/auth.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/auth.css">
-    <title>Challengify: Главная</title>
+    <link rel="icon" href="img/icon.svg">
+    <title>Регистрация</title>
 </head>
 <body>
     <div class="right-square"></div>
-    <header class="header container-fluid flex">
+    <header class="header flex">
         <menu class="flex justify-content-between align-items-center col-12">
             <li class="menu-item-logo"><a href="main.html">Challengify</a></li>
             <li class="menu-item"><a href="#">Профиль</a></li>
